--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,12 @@
 # Deployment configuration for Render
-build:
-  env:
-    NODE_VERSION: 18
-
 services:
   - type: web
     name: me-api-playground-backend
     runtime: node
-    buildCommand: cd backend && npm install
-    startCommand: cd backend && npm start
+    rootDir: backend
+    buildCommand: npm install
+    startCommand: npm start
+    env: node
     envVars:
       - key: NODE_ENV
         value: production
@@ -16,5 +14,3 @@ services:
         sync: false
       - key: FRONTEND_URL
         sync: false
-      - key: PORT
-        value: 5000
